# pyWAXS

./: .dockerignore  .gitignore  CHANGELOG.md  Dockerfile  README.md  pyGIXS.yml  pyWAXS.yml  setup.cfg  setup.py
analysis_pyWAXS/: 230712_AL_cms_giwaxs_analysis.ipynb  peakfinder.ipynb
apps/: WAXSVisualizer.py  pyWAXS.py  pyWAXSFitUI.py  pyWAXSPeakFitUI.py  pyWAXSUI.py  pyWAXSim.py  pyWAXSimUI.py  test_imports.py
example/: example_pyWAXS.ipynb
main/: KW_WAXSAnalysis.ipynb  WAXSCIF_Sim.ipynb  WAXSFileManager.py  WAXSPeakSelect.py  WAXSReduce.py  WAXSSearch.py  WAXSTransform.py  __init__.py  pyWAXS.py  pyWAXSim.py  sensitivity_analysis.nc
main_pyWAXS/: WAXSComputeCrystal.py  WAXSDiffSim.py  WAXSPeakSelect.py  WAXSReverse.py  WAXSSearch_Refactored  test_file
notebooks/: KW_pyWAXS.ipynb  KW_pyWAXS_Sim.ipynb  example_pyWAXS.ipynb
notes/: pywaxsfitui-notes.rtf  pywaxsui-notes.rtf
nslsii_pyWAXS/: base.yml  conda_requirements.txt  envgen.py  packageversionnotfound.txt  pip_requirements.txt  pyHyper.yml
pyQt5app_pyWAXS/: imageviewer.py
pyWAXS_analysis/: ComputeCrystal_v0.py  calib-plot.py  gixsreduce_script.py  peakfinder.ipynb
pyWAXS_main/: WAXSAnalyze.py  WAXSAnalyze_refactored.txt  WAXSDiffSim.py  WAXSNotebook.ipynb  WAXSReduce.py  WAXSSearch.py  WAXSSearch_Refactored  WAXSTransform.py
pyWAXS_pyQt5app/: exe_main.py  gixsreduce.py
pyWAXS_reduction/: GIXSReduce.py  WAXSAnalyze.py  gixsanalysis.ipynb  timer.py
pyWAXS_simulation/: simGIXS.ipynb
pyWAXS_zz/: EasyGIWAXS.py
pywaxs/: MoleculeConstructor.py  WAXSAnalyze.py  WAXSDiffSim.py  WAXSFileManager.py  (+7 more)
(+149 files in other folders)
