[metadata]
name=pywaxs
version = 0.2.0
author = Keith White
author_email = keith.white@colorado.edu
description= pyWAXS is a Python-based X-ray scattering data reduction package.
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/ToneyGroupCU/pyWAXS
project_urls =
    Github = https://github.com/ToneyGroupCU/pyWAXS
classifiers=[
        Development Status :: 3 - Alpha,
        Intended Audience :: Science/Research,
        Programming Language :: Python :: 3.11,
    ]

[options]
# package_dir =
package_dir=
    = pywaxs
    # pyWAXS=pywaxs
packages = find:
python_requires = >=3.11
# 'install_requires = 
#     pyfai'
[options.packages.find]
where = pywaxs